--- a/src/app/modules/weather/components/weather-card/weather-card.component.html
+++ b/src/app/modules/weather/components/weather-card/weather-card.component.html
@@ -22,13 +22,40 @@
     <div class="more-info-label">Mais informações</div>
     <div class="more-info-container">
       <div class="info-block">
+
         <div class="info-block-label">
           <fa-icon size="lg" [icon]="minTempIcon"></fa-icon>
           <span>Mínima</span>
         </div>
-
         <div class="info-block-value">{{weatherDatasInput.main.temp_min | number: "1.0-0"}}°C</div>
       </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <fa-icon size="lg" [icon]="maxTempIcon"></fa-icon>
+          <span>Máxima</span>
+        </div>
+        <div class="info-block-value">{{weatherDatasInput.main.temp_max | number: "1.0-0"}}°C</div>
+      </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <fa-icon size="lg" [icon]="humidityIcon"></fa-icon>
+          <span>Humidade</span>
+        </div>
+
+        <div class="info-block-value">{{weatherDatasInput.main.humidity}}%</div>
+      </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <fa-icon size="lg" [icon]="windIcon"></fa-icon>
+          <span>Vento</span>
+        </div>
+
+        <div class="info-block-value">{{weatherDatasInput.wind.speed}}km/h</div>
+      </div>
+
     </div>
   </div>
 </div>
